--- a/UUJJ/static/css/city/city.css
+++ b/UUJJ/static/css/city/city.css
@@ -4,10 +4,8 @@ body {
    font-family: "Jua", sans-serif;
    font-style: normal;
    background: #f8e8ad !important;
-
    font-size: 1.3em;
 }
-
 /* 전체 크기, 배경 효과 */
 #all-section {
    width: 100vw;
@@ -18,23 +16,20 @@ body {
    /* background-position: center; */
    background-image: url(../../img/background.png);
 }
-
 #middle_section {
    height: 100vh;
 }
-
 /* 각 컨텐츠 크기 */
 /* 머리15 몸통70 카드5 발10 */
 header {
-   height: 15vh;
+   height: 10vh;
 }
 #main_con {
-   height: 70vh;
+   height: 80vh;
 }
 footer {
    height: 10vh;
 }
-
 #header-content {
    width: 50vw;
    max-width: 1360px;
@@ -60,6 +55,19 @@ footer {
    height: 20vh;
 }
 
+/* 맵 컨텐츠 */
+#map-container {
+   height: 60vh;
+   border-radius: 15px;
+}
+
+/* 맵 크기 */
+#map {
+   width: 100%;
+   height: 100%;
+   transform: scaleX(1.2);
+}
+
 /* 로고/홈 버튼 */
 #logo {
    margin-top: 2vh;
@@ -75,44 +83,20 @@ footer {
    background-color: rgba(00, 00, 00, 50%);
    color: #eeeeee;
 }
-
 #board_area {
    width: 50vw;
    max-width: 1360px;
-   height: 50vh;
+   height: 40vh;
    background-color: #00000040;
    font-size: 0.6em;
    scrollbar-width: none;
-   overflow-x: auto;
-   overflow-y: hidden;
-   cursor: grab;
-   white-space: nowrap;
+   overflow-x: auto; /* 수평 스크롤 활성화 */
+   overflow-y: hidden; /* 수직 스크롤 비활성화 */
+   cursor: grab; /* 드래그 가능한 커서 표시 */
+   white-space: nowrap; /* 아이템들이 줄바꿈되지 않고 한 줄로 표시되도록 */
    border-radius: 15px;
    box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
-
-/* Map container */
-#map-container {
-   width: 1200px;
-   height: 60vh;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   background: rgba(0, 0, 0, 0.5);
-   border-radius: 15px;
-}
-
-/* Map styles */
-#map {
-   width: 60%;
-   height: 100%;
-   margin: 0 auto;
-   display: flex;
-   justify-content: center;
-   transform: scaleX(1.3);
-}
-
 #board_area.active {
    cursor: grabbing; /* 드래그 중일 때의 커서 표시 */
 }
@@ -147,7 +131,7 @@ footer {
    z-index: 2;
 }
 #bt_img a {
-   height: 25vh;
+   height: 23vh;
 }
 #shadow {
    position: absolute;
